--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-    "name": "test-project",
+    "name": "netflix-clone",
     "version": "0.1.0",
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "postinstall": "npm run build",
-        "start": "node server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
+        "axios": "^0.23.0",
+        "cheerio": "^1.0.0-rc.10",
         "core-js": "^3.6.5",
         "express": "^4.17.1",
         "vue": "^3.0.0"
@@ -19,3 +22,4 @@
         "@vue/compiler-sfc": "^3.0.0"
     }
 }
+
